<resources>
    <string name="app_name">vgik Gags Button</string>
    <string name="text_cska">ЦСКА С@%?ТЬ</string>
    <string name="text_penalti">ЭТО ПЕНАААААЛЬТИ</string>
    <string name="text_shut_up">Е@%?№#КИ СВОИ ЗАКРОЙТЕ</string>
    <string name="text_pasha">ПОГРЕБНЯК ПАША</string>
    <string name="text_red_white_days">КРАСНО-БЕЛЫЕ ДНИ</string>
    <string name="text_enough">ХВАТИТ</string>
</resources>
