<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cska"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_shape_btn"
            android:fontFamily="@font/gagalin_regular"
            android:text="@string/text_cska"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_penalti"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_shape_btn"
            android:fontFamily="@font/gagalin_regular"
            android:text="@string/text_penalti"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cska" />

        <Button
            android:id="@+id/btn_shut_up"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/round_shape_btn"
            android:fontFamily="@font/gagalin_regular"
            android:text="@string/text_shut_up"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_penalti" />

        <Button
            android:id="@+id/btn_pasha"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_shape_btn"
            android:fontFamily="@font/gagalin_regular"
            android:text="@string/text_pasha"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_shut_up" />

        <Button
            android:id="@+id/btn_redWhite_days"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_shape_btn"
            android:fontFamily="@font/gagalin_regular"
            android:text="@string/text_red_white_days"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pasha" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>